--- a/src/main/resources/public/src/scss/template/_date-picker.scss
+++ b/src/main/resources/public/src/scss/template/_date-picker.scss
@@ -219,7 +219,7 @@ $datepicker-active-color: $point-blue;
                     }
                 }
             }
-            .button-group {
+            .btn-group {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
