--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -41,8 +41,7 @@
             </div>
             <div class="horizontal-bar"></div>
             <div class="btn-bar">
-                <button class="default-line" type="button" onclick="location.href='/portal/notices/search'"
-                        th:text="#{common.btn.list}"></button>
+                <a class="btn default-line" href="/portal/notices/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
     </div>
