--- a/src/main/resources/public/src/scss/portal/_login.scss
+++ b/src/main/resources/public/src/scss/portal/_login.scss
@@ -33,61 +33,6 @@
         }
     }
 
-    &-btn {
-        border: 0.063rem solid; // 1px
-        border-radius: 0.063rem; // 1px
-        display: inline-block;
-        text-align: center;
-        font-size: 1rem; // 16px
-        vertical-align: middle;
-        padding: 0.75rem 0.625rem; // 12px 10px
-
-        &-return {
-            position: absolute;
-            top: 5rem; // 80px
-            left: 66rem; // 1056px
-            color: #FFFFFF;
-            border-radius: 0.1875rem; // 3px
-            padding: 0.75rem 3rem; // 12px 48px
-        }
-
-        &-submit {
-            background-color: $point-blue;
-            color: #FFFFFF;
-            width: 100%;
-        }
-
-        &-google {
-            background-color: #ffffff;
-            border-color: $line-gray;
-            color: $light-black;
-            width: 100%;
-
-            &-icon {
-                background-image: url($icon-folder-path + "login/icon_login_google.svg");
-                background-size: 1.188rem; // 19px
-                background-repeat: no-repeat;
-                background-position-y: center;
-                background-position-x: 0.625rem; // 10px
-            }
-        }
-
-        &-kakao {
-            background-color: #FFDE00;
-            border-color: #EBCC00;
-            color: $light-black;
-            width: 100%;
-
-            &-icon {
-                background-image: url($icon-folder-path + "login/icon_login_kakao.svg");
-                background-size: 1.188rem; // 19px
-                background-repeat: no-repeat;
-                background-position-y: center;
-                background-position-x: 0.625rem; // 10px
-            }
-        }
-    }
-
     &-divide {
         display: flex;
         flex-basis: 100%;
@@ -135,6 +80,10 @@
         &-signUp, &-findPwd, &-findId {
             flex: 1;
             border-right: 0.063rem solid #7b8593; // 1px
+
+            a {
+                color: $dark-gray;
+            }
 
             &:last-child {
                 border: none;
