--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -47,12 +47,9 @@ a {
   cursor: pointer;
 }
 a:link,
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
+a:visited,
 a:hover,
-a:active { 
+a:active {
   text-decoration: none;
 }
 // input
