--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -14,7 +14,7 @@
         <div class="login-background">
             <img class="login-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
             <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
-            <a href="/portal/portalMain" class="login-btn login-btn-return" th:text="#{common.btn.return}"></a>
+            <a href="/portal/portalMain" class="btn login-return" th:text="#{common.btn.return}"></a>
         </div>
         <div class="login-form">
             <h1 th:text="#{portal.label.login}"></h1>
@@ -29,12 +29,12 @@
                     <label tabindex="-1" th:text="#{user.label.password}"></label>
                     <input type="password" id="upasswd" name="upasswd" maxlength="100" required="required">
                 </div>
-                <button class="login-btn login-btn-submit" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
+                <button class="login-submit" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
             </div>
             <div class="login-divide" th:text="#{login.label.or}"></div>
             <div class="login-platform">
-                <button class="login-btn login-btn-google login-btn-google-icon" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
-                <button class="login-btn login-btn-kakao login-btn-kakao-icon" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                <button class="login-google icon-google" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                <button class="login-kakao icon-kakao" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
             </div>
             <div class="login-other">
                 <div class="login-other-signUp"><a href="/certification/signup" th:text="#{login.label.signupNote}"></a></div>
