--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -237,6 +237,7 @@
 
                 &.snb {
                     padding: 8px 20px 8px 20px;
+                    color: $menu-color;
                 }
                 &.active {
                     span {
