--- a/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
+++ b/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
@@ -29,9 +29,9 @@
                     <input type="text" id="boardCategorySort" maxlength="2" onKeyup="this.value=this.value.replace(/[^0-9]/g,'');"/>
                 </div>
             </div>
-            <div class="btn-bar">
+            <div class="btn-list btn-bar">
                 <button class="point-fill" onclick="saveBoardCategory('post')" th:text="#{common.btn.add}"></button>
-                <button class="default-line" onclick="location.href='/board-admin/search'" th:text="#{common.btn.list}"></button>
+                <a class="btn default-line" href="/board-admin/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
         <div class="list" id="boardCategoryList"></div>
