--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </div>
-        <div class="btn-bar">
+        <div class="btn-list btn-bar">
             <button class="point-fill" type="button" th:text="#{common.btn.check}" onclick="customCodeDataSave();"></button>
             <button class="default-line" type="button" th:text="#{common.btn.close}" onclick="window.close();"></button>
         </div>
