--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="btn-bar">
-                <button class="default-line" onclick="location.href='/custom-codes/search'" th:text="#{common.btn.list}"></button>
+                <a class="btn default-line" href="/custom-codes/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
     </div>
