--- a/src/main/resources/public/template/document/documentDisplay.html
+++ b/src/main/resources/public/template/document/documentDisplay.html
@@ -18,7 +18,7 @@
             </table>
         </div>
         <div class="horizontal-bar"></div>
-        <div class="btn-bar">
+        <div class="btn-list btn-bar">
             <button class="point-fill" th:text="#{common.btn.register}" onclick="onSave();"></button>
             <button class="default-fill" th:text="#{common.btn.close}" onclick="window.close();"></button>
         </div>
