--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -96,22 +96,13 @@
                         &:first-child {
                             padding-left: 1.25rem; // 20px
                         }
+                        a {
+                          color: $dark-gray;
+                        }
                         button {
                           margin: 0;
                           padding: 0 5px;
                           height: 30px;
-                          .icon-search {
-                            display: inline-block;
-                            @include maskImage('#{$icon-folder-path}icon_search.svg', 18px, 18px, no-repeat, center, 18px 18px, $gray);
-                          }
-                          .icon-edit {
-                            display: inline-block;
-                            @include maskImage('#{$icon-folder-path}icon_edit.svg', 20px, 20px, no-repeat, center, 20px 20px, $dark-gray);
-                          }
-                          .icon_delete {
-                            display: inline-block;
-                            @include maskImage('#{$icon-folder-path}icon_delete.svg', 18px, 20px, no-repeat, center, 18px 20px, $dark-gray);
-                          }
                         }
                     }
                 }
