--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -40,9 +40,8 @@
                     <div id="dropZoneFiles"></div>
                     <div id="dropZoneUploadedFiles"></div>
                 </div>
-                <div class="btn-bar">
-                    <button type="button" class="default-line" id="btnList" onclick="location.href='/faqs/search'"
-                            th:text="#{common.btn.list}"></button>
+                <div class="btn-list btn-bar">
+                    <a class="btn default-line" href="/faqs/search" th:text="#{common.btn.list}"></a>
                     <button type="button" class="point-fill" id="btnRegist" sec:authorize="hasAuthority('faq.create')"
                             th:if="!${faq?.faqId}" th:text="#{common.btn.save}"></button>
                     <button type="button" class="point-fill" id="btnUpdate" sec:authorize="hasAuthority('faq.update')"
