--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -39,7 +39,7 @@
             </div>
             <div class="horizontal-bar"></div>
             <div class="btn-bar">
-                <button class="default-line" type="button" onclick="location.href='/faqs/search'" th:text="#{common.btn.list}"></button>
+                <a class="btn default-line" href="/faqs/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
     </div>
