--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -91,8 +91,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-bar">
-                    <button type="button" class="default-line" onclick="location.href='/notices/search'" th:text="#{common.btn.list}"></button>
+                <div class="btn-list btn-bar">
+                    <a class="btn default-line" href="/notices/search" th:text="#{common.btn.list}"></a>
                     <button sec:authorize="hasAuthority('notice.create')" th:if="!${notice?.noticeNo}" type="button" id="insert"
                             class="point-fill" th:onclick="restSubmit('post',[[@{/rest/notices}]])" th:text="#{common.btn.register}">
                     </button>
