--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -42,8 +42,7 @@
             </div>
             <div class="horizontal-bar"></div>
             <div class="btn-bar">
-                <button class="default-line" th:text="#{common.btn.list}"
-                        onclick="location.href='/portal/downloads/search'"></button>
+                <a class="btn default-line" href="/portal/downloads/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
     </div>
