--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -73,7 +73,7 @@
                             <div class="row">
                                 <input class="column-5" id="department" name="department" th:value="${deptCodeDetail?.codeValue}" disabled>
                                 <input type="hidden" id="departmentCode" name="departmentCode" th:value="${deptCodeDetail?.code}"/>
-                                <button type="button" class="default-fill column-1" onclick="deptPopUp();" th:text="#{common.btn.select}"></button>
+                                <button type="button" class="default-line column-1" onclick="deptPopUp();" th:text="#{common.btn.select}"></button>
                             </div>
                         </div>
                         <div class="form-set">
